1.add functions: sign up, add address information; 2.update README file

--- a/10_vue_imooc_shopping_mall/src/assets/css/login.css
+++ b/10_vue_imooc_shopping_mall/src/assets/css/login.css
@@ -107,6 +107,11 @@ a {
   line-height: 23px;
   background: 0 0!important;
 }
+
+.regi_form_input .regi_login_input_left_10{
+  left: 10px;
+}
+
 .md-title{
   position: absolute;
   top: 14px;
